feat: 编写注册组件结构模板.

--- a/mall/public/index.html
+++ b/mall/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>移动商城</title>
+    <style>
+      html, body {
+        height: 100%;
+        background-color: #f0f0f0;
+      }
+    </style>
   </head>
   <body>
     <noscript>
