--- a/mall/public/index.html
+++ b/mall/public/index.html
@@ -9,7 +9,7 @@
     <style>
       html, body {
         height: 100%;
-        background-color: #f0f0f0;
+        background: #f0f0f0;
       }
     </style>
   </head>
