feat: 完成用户信息修改组件前端模板.

--- a/mall/public/index.html
+++ b/mall/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>移动商城</title>
+    <title>轻松购</title>
   </head>
   <body>
     <noscript>
